5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1723_2508.log
== TEST (2019-05-12 22:57:01) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
soma=1
i=0
while(i<k):
	if(k==1):
		print(3)
	else:
	soma=soma+((-1)**i)*(4/factorial(i+4)-factorial(i+2))
	i=i+1
print(round(soma,8))
	
-- ERROR:
File "XXXX", line 9
    soma=soma+((-1)**i)*(4/factorial(i+4)-factorial(i+2))
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:57:15) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
soma=1
i=0
while(i<k):
	if(k==1):
		print(3)
	else:
		soma=soma+((-1)**i)*(4/factorial(i+4)-factorial(i+2))
	i=i+1
print(round(soma,8))
	
-- OUTPUT:
-618.86180556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:58:13) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
soma=1
i=0
while(i<k):
	if(k==1):
		print(3)
	else:
		soma=soma+((-1)**i)*(4/factorial(i+4)-factorial(i+2))
	i=i+1
print(round(soma,8))
	
-- OUTPUT:
-618.86180556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:58:24) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
soma=1
i=0
while(i<k):
	if(k==1):
		print(3)
	else:
		soma=soma+((-1)**i)*(4/factorial(i+4)-factorial(i+2))
	i=i+1
print(round(soma,8))
	
-- OUTPUT:
-618.86180556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:58:38) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
soma=1
i=0
while(i<k):
	if(k==1):
		print(3)
	else:
		soma=soma+(4/factorial(i+4)-factorial(i+2))
	i=i+1
print(round(soma,8))
	
-- OUTPUT:
-870.79355159
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:58:45) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
soma=1
i=0
while(i<k):
	if(k==1):
		print(3)
	else:
		soma=soma+(4/factorial(i+4)-factorial(i+2))
	i=i+1
print(round(soma,8))
	
-- OUTPUT:
-870.79355159
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:16:16) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
soma=1
i=0
while(i<k):
	if(k==1):
		print(3)
	elif(k==2):
		a=(4/factorial(4))
		print(round(a,8))
	else:
		soma=soma+(4/(factorial(i+4)/factorial(i+2))
		i=i+1	
		print(round(soma,8))
	
-- ERROR:
File "XXXX", line 13
    i=i+1	
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:16:48) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
soma=1
i=0
while(i<k):
	if(k==1):
		print(3)
	elif(k==2):
		a=(4/factorial(4))
		print(round(a,8))
	else:
		soma=soma+(4/(factorial(i+4)/factorial(i+2))
		i=i+1	
		print(round(soma,8))
	
-- ERROR:
File "XXXX", line 13
    i=i+1	
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:18:29) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
soma=1
i=0
if(k==1):
		print(3)
	elif(k==2):
		a=(4/factorial(4))
		print(round(a,8))
	else:	
		while(i<k):
			if(k==1):
				print(3)
			elif(k==2):
				a=(4/factorial(4))
				print(round(a,8))
			else:
				soma=soma+(4/(factorial(i+4)/factorial(i+2))
				i=i+1	
				print(round(soma,8))
	
-- ERROR:
File "XXXX", line 7
    elif(k==2):
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:18:42) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
soma=1
i=0
if(k==1):
		print(3)
	elif(k==2):
		a=(4/factorial(4))
		print(round(a,8))
	else:	
		while(i<k):
			if(k==1):
				print(3)
			elif(k==2):
				a=(4/factorial(4))
				print(round(a,8))
			else:
				soma=soma+(4/(factorial(i+4)/factorial(i+2))
				i=i+1	
				print(round(soma,8))
	
-- ERROR:
File "XXXX", line 7
    elif(k==2):
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:19:04) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
soma=1
i=0
if(k==1):
		print(3)
	elif(k==2):
		a=(4/factorial(4))
		print(round(a,8))
	else:	
		while(i<k):
			if(k==1):
				print(3)
			elif(k==2):
				a=(4/factorial(4))
				print(round(a,8))
			else:
				soma=soma+(4/(factorial(i+4)/factorial(i+2))
				i=i+1	
				print(round(soma,8))
	
-- ERROR:
File "XXXX", line 7
    elif(k==2):
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:19:09) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
soma=1
i=0
if(k==1):
		print(3)
		elif(k==2):
		a=(4/factorial(4))
		print(round(a,8))
	else:	
		while(i<k):
			if(k==1):
				print(3)
			elif(k==2):
				a=(4/factorial(4))
				print(round(a,8))
			else:
				soma=soma+(4/(factorial(i+4)/factorial(i+2))
				i=i+1	
				print(round(soma,8))
	
-- ERROR:
File "XXXX", line 7
    elif(k==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:19:22) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
soma=1
i=0
if(k==1):
		print(3)
elif(k==2):
		a=(4/factorial(4))
		print(round(a,8))
	else:	
		while(i<k):
			if(k==1):
				print(3)
			elif(k==2):
				a=(4/factorial(4))
				print(round(a,8))
			else:
				soma=soma+(4/(factorial(i+4)/factorial(i+2))
				i=i+1	
				print(round(soma,8))
	
-- ERROR:
File "XXXX", line 10
    else:	
         ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:19:26) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
soma=1
i=0
if(k==1):
		print(3)
elif(k==2):
		a=(4/factorial(4))
		print(round(a,8))
else:	
		while(i<k):
			if(k==1):
				print(3)
			elif(k==2):
				a=(4/factorial(4))
				print(round(a,8))
			else:
				soma=soma+(4/(factorial(i+4)/factorial(i+2))
				i=i+1	
				print(round(soma,8))
	
-- ERROR:
File "XXXX", line 19
    i=i+1	
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:20:52) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
soma=1
i=0
if(k==1):
		print(3)
elif(k==2):
		a=(4/factorial(4))
		print(round(a,8))
else:	
	while(i<k):
		soma=soma+(4/(factorial(i+4)/factorial(i+2))
		i=i+1	
print(round(soma,8))
	
	
				
-- ERROR:
File "XXXX", line 13
    i=i+1	
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:21:02) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
soma=1
i=0
if(k==1):
		print(3)
elif(k==2):
		a=(4/factorial(4))
		print(round(a,8))
else:	
	while(i<k):
		soma=soma+(4/(factorial(i+4)/factorial(i+2))
		i=i+1
print(round(soma,8))
	
	
				
-- ERROR:
File "XXXX", line 13
    i=i+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:21:31) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
soma=1
i=0
if(k==1):
		print(3)
elif(k==2):
		a=(4/factorial(4))
		print(round(a,8))
else:	
	while(i<k):
		soma=soma+(4/(factorial(i+4)/factorial(i+2))
		i=i+1
print(round(soma,8))
	
	
				
-- ERROR:
File "XXXX", line 13
    i=i+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:21:59) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))

if(k==1):
		print(3)
elif(k==2):
		a=(4/factorial(4))
		print(round(a,8))
		
soma=1
i=0		
		
else:	
	while(i<k):
		
		soma=soma+(4/(factorial(i+4)/factorial(i+2))
		i=i+1
print(round(soma,8))
	
	
				
-- ERROR:
File "XXXX", line 13
    else:	
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:22:17) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))

if(k==1):
		print(3)
elif(k==2):
		a=(4/factorial(4))
		print(round(a,8))
		
soma=1
i=0		
		
	else:	
		while(i<k):
		
			soma=soma+(4/(factorial(i+4)/factorial(i+2))
			i=i+1
print(round(soma,8))
	
	
				
-- ERROR:
File "XXXX", line 13
    else:	
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:22:31) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))

if(k==1):
		print(3)
elif(k==2):
		a=(4/factorial(4))
		print(round(a,8))
		

		
else:	
		while(i<k):
		
			soma=soma+(4/(factorial(i+4)/factorial(i+2))
			i=i+1
print(round(soma,8))
	
	
				
-- ERROR:
File "XXXX", line 16
    i=i+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:28:15) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
f=factorial(4+i)
i=1
print(f)
	
				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f=factorial(4+i)
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:28:25) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
f=factorial(4+i)
i=1
print(f)
	
				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    f=factorial(4+i)
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:28:45) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
i=1
f=factorial(4+i)

print(f)
	
				
-- OUTPUT:
120
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 23:29:03) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
i=0
f=factorial(4+i)

print(f)
	
				
-- OUTPUT:
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:29:49) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
i=0
while(i<(k+1)):
	
				
-- ERROR:
File "XXXX", line 7
    
        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:30:29) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
i=0
y=k+1
while(i<(k+1)):

				
-- ERROR:
File "XXXX", line 8
    
        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:30:35) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
i=0
y=k+1
while(i<(k+1)):

				
-- ERROR:
File "XXXX", line 8
    
        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:30:39) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
i=0
y=k+1
while(i<(k+1)):

				
-- ERROR:
File "XXXX", line 8
    
        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:30:40) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
i=0
y=k+1
while(i<(k+1)):

				
-- ERROR:
File "XXXX", line 8
    
        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 20:37:14) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
i=2
j=0
soma=3
y=k+1
while(i<y):
	soma=soma+(4/(i*(i+1)*(i+2))*(-1)**j
	i=i+1
	j=j+1
print(round(soma,8))
				
-- EXECUTION TIME:
0.186611
-- ERROR:
  File "/home/codebench/codes/1723/2508/main.py", line 9
    i=i+1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 20:41:49) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
i=2
j=0
soma=3
y=k+1
while(k>1):
	soma=soma+(4/(i*(i+1)*(i+2))*(-1)**j
	i=i+2
	j=j+1
while(i<y):
	soma=soma+(4/(i*(i+1)*(i+2))*(-1)**j)
	i=i+2
	j=j+1
-- EXECUTION TIME:
0.138391
-- ERROR:
  File "/home/codebench/codes/1723/2508/main.py", line 9
    i=i+2
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 20:42:17) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
i=2
j=0
soma=3
y=k+1
while(k>1):
	soma=soma+(4/(i*(i+1)*(i+2))*(-1)**j
	i=i+2
	j=j+1
while(i<y):
	soma=soma+(4/(i*(i+1)*(i+2))*(-1)**j)
	i=i+2
	j=j+1
print(round(soma,8))
-- EXECUTION TIME:
0.19217
-- ERROR:
  File "/home/codebench/codes/1723/2508/main.py", line 9
    i=i+2
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:42:20) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
i=2
j=0
soma=3
y=k+1
while(k>1):
	soma=soma+(4/(i*(i+1)*(i+2))*(-1)**j
	i=i+2
	j=j+1
while(i<y):
	soma=soma+(4/(i*(i+1)*(i+2))*(-1)**j)
	i=i+2
	j=j+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 9
    i=i+2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:43:04) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
i=2
j=0
soma=3
y=k+1
while(k>1):
	soma=soma+(4/(i*(i+1)*(i+2))*((-1)**j)
	i=i+2
	j=j+1
while(i<y):
	soma=soma+(4/(i*(i+1)*(i+2))*(-1)**j)
	i=i+2
	j=j+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 9
    i=i+2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:43:22) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
i=2
j=0
soma=3
y=k+1
while(k>1):
	soma=soma+ (4/(i*(i+1)*(i+2))*((-1)**j))
	i=i+2
	j=j+1
while(i<y):
	soma=soma+(4/(i*(i+1)*(i+2))*(-1)**j)
	i=i+2
	j=j+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 9
    i=i+2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:43:41) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
i=2
j=0
soma=3
y=k+1
while(k>1):
	soma=soma+ (4/(i*(i+1)*(i+2))*((-1)**j))
	i=i+2
	j=j+1
while(i<y):
	soma=soma+(4/(i*(i+1)*(i+2))*(-1)**j)
	i=i+2
	j=j+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 9
    i=i+2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:43:53) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
i=2
j=0
soma=3
y=k+1
while(k>1):
	soma=soma+ (4/(i*(i+1)*(i+2))*((-1)**j))
	i=i+2
	j=j+1
while(i<y):
	soma=soma+(4/(i*(i+1)*(i+2))*(-1)**j)
	i=i+2
	j=j+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 9
    i=i+2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:44:50) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
i=2
j=0
soma=3

while(k>1):
	soma=soma+(4/(i*(i+1)*(i+2))*((-1)**j))
	i=i+2
	j=j+1
while(i<y):
	soma=soma+(4/(i*(i+1)*(i+2))*(-1)**j)
	i=i+2
	j=j+1
	n=n-1
print(round(soma,8))
-- ERROR:
File "XXXX", line 9
    i=i+2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:31:01) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
i=2
j=0
soma=3
y=k+1
while(k>1):
	soma=soma+ (4/(i*(i+1)*(i+2))*((-1)**j))
	i=i+2
	j=j+1
while(i<y):
	soma=soma+(4/(i*(i+1)*(i+2))*(-1)**j)
	i=i+2
	j=j+1
print(round(soma,8))
-- EXECUTION TIME:
2100.48
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:33:01) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
i=2
j=0
soma=3

while(k>1):
	soma=soma+(4/(i*(i+1)*(i+2))*((-1)**j))
	i=i+2
	j=j+1
while(i<y):
	soma=soma+(4/(i*(i+1)*(i+2))*(-1)**j)
	i=i+2
	j=j+1
	n=n-1
print(round(soma,8))
-- EXECUTION TIME:
2177.17
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:34:01) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
i=2
j=0
soma=3

while(k>1):
	soma=soma+(4/(i*(i+1)*(i+2))*((-1)**j))
	i=i+2
	j=j+1
while(i<y):
	soma=soma+(4/(i*(i+1)*(i+2))*(-1)**j)
	i=i+2
	j=j+1
	n=n-1
print(round(soma,8))
-- EXECUTION TIME:
2174.69
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:34:01) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
i=2
j=0
soma=3

while(k>1):
	soma=soma+(4/(i*(i+1)*(i+2))*((-1)**j))
	i=i+2
	j=j+1
while(i<y):
	soma=soma+(4/(i*(i+1)*(i+2))*(-1)**j)
	i=i+2
	j=j+1
	n=n-1
print(round(soma,8))
-- EXECUTION TIME:
2169.71
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:34:01) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
i=2
j=0
soma=3

while(k>1):
	soma=soma+(4/(i*(i+1)*(i+2))*((-1)**j))
	i=i+2
	j=j+1
while(i<n):
	soma=soma+(4/(i*(i+1)*(i+2))*(-1)**j)
	i=i+2
	j=j+1
	n=n-1
print(round(soma,8))
-- EXECUTION TIME:
2204.43
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:35:01) 
-- CODE:
from math import*
k=int(input("entre com a ordem: "))
i=2
j=0
soma=3

while(k>1):
	soma=soma+(4/(i*(i+1)*(i+2))*((-1)**j))
	i=i+2
	j=j+1
while(i<n):
	soma=soma+(4/(i*(i+1)*(i+2))*(-1)**j)
	i=i+2
	j=j+1
	n=n-1
print(round(soma,8))
-- EXECUTION TIME:
2205.66
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
